--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,8 @@ body {
 
 @media screen and (min-width: 768px) {
     .booklist{
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(2, 1fr);
+        align-items: flex-start;
     }
 }
 
@@ -37,5 +38,5 @@ body {
 .book h4{
     color: #617d98;
     font-size: 0.75rem;
-    margin-top: 0.25rem;
+    margin-top: 0.55rem;
 }   
